--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -88,13 +88,17 @@
 \newcommand{\reftab}[1]{\mbox{Table~\ref{tab:#1}}}
 \newcommand{\refeqn}[1]{\mbox{(\ref{eqn:#1})}}
 
-\title{\sout{Mutley's} Guide To The Wacky Racers, V1.01}
-\author{Michael Hayes}
-\date{2022}
+\title{Guide To The Wacky Racers, V1.010}
+\author{Michael Hayes and Mutley}
+\date{2022\\[2cm] \includegraphics{wacky_mural.jpg}}
 
 \begin{document}
 \maketitle
+
+
 \tableofcontents
+
+
 
 %\input{requirements}
 %\input{schedule}
