--- a/doc/guide/PCB.tex
+++ b/doc/guide/PCB.tex
@@ -97,13 +97,18 @@ chip manufacturer usually provides a recommended layout.
   will need one for every signal and power supply.  \textbf{You have
     been warned!}  If you don't believe me, compare the size of an
   oscilloscope probe to a surface mount IC pin and see if you can hold
-  the probe in place.
+  the probe in place.  I recommend using 1206 test points since the
+  smaller ones rip off easily.
+
+  \includegraphics[width=5cm]{../guide/figs/testpoints.jpg}  \includegraphics[width=5cm]{../guide/figs/micro_probe_zoom.jpg}
 
 \item Label the test points on the silk screen with meaningful names.
 
 \item Add ground test points that you can clip an oscilloscope ground
   lead to.  Keep these away from other test points to avoid shorting
   with the oscilloscope ground clip.
+
+\includegraphics[width=5cm]{figs/scope_probe_testpoints.jpg}
 
 \item Check mounting holes.
 
