--- a/doc/guide/assembly.tex
+++ b/doc/guide/assembly.tex
@@ -49,7 +49,7 @@ soldering iron.
 
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=6in]{figs/solder_bridge.jpg}
+  \includegraphics[width=3in]{figs/solder_bridge_zoom.jpg}
   \caption{A solder bridge shorting pins 1 and 2 of the H-bridge.
     This can easily occur if there is too much solder paste.}
   \label{fig:solder-bridge}
