--- a/doc/guide/hardware.tex
+++ b/doc/guide/hardware.tex
@@ -42,6 +42,35 @@ The system requirements are specified in the assignment instructions.
 
 \end{enumerate}
 
+
+\section{Standard chassis}
+
+You can build your own racer or use the standard chassis.  The
+standard chassis comes with:
+%
+\begin{itemize}
+\item A pair of 6\,V DC motors.
+
+\item A bumper with microswitch.
+
+\item An on/off switch and fuse for the battery.
+
+\item Battery and holder.
+\end{itemize}
+%
+It is available from Diego in the Electronics Lab.  If you wish to
+make your own chassis, Diego can supply the bumper, battery, and
+motors.
+
+
+\begin{figure}[!h]
+  \centering \includegraphics[width=5in]{figs/chassis.jpg}
+  \caption{Photo of the standard chassis.}
+  \label{fig:chassis}
+\end{figure}
+
+
+
 \section{SAM4S MCU}\label{sam4s-mcu}
 
 The SAM4S MCU is overkill for this assignment but is typical of ARM
